--- a/brief1/index.html
+++ b/brief1/index.html
@@ -6,11 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'accueil du magasin de vidéo</title>
+    <link rel="stylesheet" href="normalisation.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-
+<ul>
+    <li><a href="#">video to rent</a></li>
+    <li><a href="#">video to buy</a></li>
+    <li><a href="#">used DVDs</a></li>
+    <li><a href="#">Off</a></li>
+</ul>
         </nav>
     </header>
     <section>
