--- a/brief1/index.html
+++ b/brief1/index.html
@@ -13,14 +13,27 @@
     <header>
         <nav>
 <ul>
+    <img src="img/Capture.PNG">
     <li><a href="#">video to rent</a></li>
     <li><a href="#">video to buy</a></li>
     <li><a href="#">used DVDs</a></li>
     <li><a href="#">Off</a></li>
 </ul>
+<ol>
+    <li><a href="#">home</a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; /</li>
+    <li><a href="#">usedDVDs  </a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; /</li>
+    <li><a href="#">Less than £10</a></li>
+</ol>
         </nav>
     </header>
     <section>
+        <h1>Less than £10</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Aperiam nam suscipit, non omnis,
+             pariatur unde expedita eveniet atque labore, itaque id dolores! Quo rerum itaque
+             , quis molestias distinctio laborum. Error.</p>
+
+
 
     </section>
     <footer>
