--- a/brief1/index.html
+++ b/brief1/index.html
@@ -29,11 +29,57 @@
     <section>
         <h1>Less than £10</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Aperiam nam suscipit, non omnis,
+             Aperiam nam suscipit, non omnis,<br>
              pariatur unde expedita eveniet atque labore, itaque id dolores! Quo rerum itaque
              , quis molestias distinctio laborum. Error.</p>
 
 
+
+    </section>
+
+    <section>
+        <div class="big">
+        <!-- <div class="card">
+            <span class="card1" ></span>       
+                <h1>video title 1 </title></h1><br>
+                <span id="RR">RRP : £18.99</span><br>
+                <span>price you pay £9.99</span><br>
+                <span id="SA">you saving £9 </span><br>
+        </div> -->
+        <div class="cards">
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
+                <h1>video title 1 </title></h1><br>
+                <span id="RR">RRP : £18.99</span><br>
+                <span>price you pay £9.99</span><br>
+                <span id="SA">you saving £9 </span><br>
+        </div>
+        <div class="cards">
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
+                <h1>video title 1 </title></h1><br>
+                <span id="RR">RRP : £18.99</span><br>
+                <span>price you pay £9.99</span><br>
+                <span id="SA">you saving £9 </span><br>
+        </div>
+        <div class="cards">
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
+                <h1>video title 1 </title></h1><br>
+                <span id="RR">RRP : £18.99</span><br>
+                <span>price you pay £9.99</span><br>
+                <span id="SA">you saving £9 </span><br>
+        </div>
+        <div class="cards">
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
+                <h1>video title 1 </title></h1><br>
+                <span id="RR">RRP : £18.99</span><br>
+                <span>price you pay £9.99</span><br>
+                <span id="SA">you saving £9 </span><br>
+        </div>
+      
+    </div>
 
     </section>
     <footer>
