--- a/brief1/index.html
+++ b/brief1/index.html
@@ -39,40 +39,49 @@
 
     <section>
         <div class="big">
-        <!-- <div class="card">
-            <span class="card1" ></span>       
-                <h1>video title 1 </title></h1><br>
-                <span id="RR">RRP : £18.99</span><br>
-                <span>price you pay £9.99</span><br>
-                <span id="SA">you saving £9 </span><br>
-        </div> -->
-        <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
+            <div class="cards">
+            <div class="box">
+                <h1 class="prodc">your image product 1</h1>
+            </div>
                 <h1>video title 1 </title></h1><br>
                 <span id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
                 <span id="SA">you saving £9 </span><br>
         </div>
+
         <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
+            <div class="box">
+            </div>
                 <h1>video title 1 </title></h1><br>
                 <span id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
                 <span id="SA">you saving £9 </span><br>
         </div>
+
         <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
+            <div class="box">
+            </div>
                 <h1>video title 1 </title></h1><br>
                 <span id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
                 <span id="SA">you saving £9 </span><br>
         </div>
+
         <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
+            <div class="box">
+            </div>
+                <h1>video title 1 </title></h1><br>
+                <span id="RR">RRP : £18.99</span><br>
+                <span>price you pay £9.99</span><br>
+                <span id="SA">you saving £9 </span><br>
+        </div>
+
+
+
+
+        <div class="cards">
+            <div class="box">
+            </div>
                 <h1>video title 1 </title></h1><br>
                 <span id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
