--- a/brief1/index.html
+++ b/brief1/index.html
@@ -39,10 +39,9 @@
 
     <section>
         <div class="big">
-            <div class="cards">
-            <div class="box">
-                <h1 class="prodc">your image product 1</h1>
-            </div>
+        <div class="cards">
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
                 <h1>video title 1 </title></h1><br>
                 <span id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
@@ -50,26 +49,8 @@
         </div>
 
         <div class="cards">
-            <div class="box">
-            </div>
-                <h1>video title 1 </title></h1><br>
-                <span id="RR">RRP : £18.99</span><br>
-                <span>price you pay £9.99</span><br>
-                <span id="SA">you saving £9 </span><br>
-        </div>
-
-        <div class="cards">
-            <div class="box">
-            </div>
-                <h1>video title 1 </title></h1><br>
-                <span id="RR">RRP : £18.99</span><br>
-                <span>price you pay £9.99</span><br>
-                <span id="SA">you saving £9 </span><br>
-        </div>
-
-        <div class="cards">
-            <div class="box">
-            </div>
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
                 <h1>video title 1 </title></h1><br>
                 <span id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
@@ -78,10 +59,17 @@
 
 
 
-
         <div class="cards">
-            <div class="box">
-            </div>
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
+                <h1>video title 1 </title></h1><br>
+                <span id="RR">RRP : £18.99</span><br>
+                <span>price you pay £9.99</span><br>
+                <span id="SA">you saving £9 </span><br>
+        </div>
+        <div class="cards">
+            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
+             </div>
                 <h1>video title 1 </title></h1><br>
                 <span id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
