--- a/brief1/index.html
+++ b/brief1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
@@ -9,78 +10,79 @@
     <link rel="stylesheet" href="normalisation.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
-<ul>
-    <img src="img/Capture.PNG">
-    <li><a href="#">video to rent</a></li>
-    <li><a href="#">video to buy</a></li>
-    <li><a href="#">used DVDs</a></li>
-    <li><a href="#">Off</a></li>
-</ul>
-<ol>
-    <li><a href="#">home</a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; /</li>
-    <li><a href="#">usedDVDs  </a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; /</li>
-    <li><a href="#">Less than £10</a></li>
-</ol>
+            <ul class="nav">
+                <li><img src="img/Capture.PNG" width="100%" alt="logo"></li>
+                <li><a href="#">video to rent</a></li>
+                <li><a href="#">video to buy</a></li>
+                <li><a href="#">used DVDs</a></li>
+                <li><a href="#">Off</a></li>
+            </ul>
+            <ol>
+                <li><a href="#">home</a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; /</li>
+                <li><a href="#">usedDVDs </a>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; /</li>
+                <li><a href="#">Less than £10</a></li>
+            </ol>
         </nav>
     </header>
     <section>
         <h1>Less than £10</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Aperiam nam suscipit, non omnis,<br>
-             pariatur unde expedita eveniet atque labore, itaque id dolores! Quo rerum itaque
-             , quis molestias distinctio laborum. Error.</p>
+            Aperiam nam suscipit, non omnis,<br>
+            pariatur unde expedita eveniet atque labore, itaque id dolores! Quo rerum itaque
+            , quis molestias distinctio laborum. Error.</p>
 
-
-
-    </section>
-
-    <section>
         <div class="big">
-        <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
-                <h1>video title 1 </title></h1><br>
-                <span id="RR">RRP : £18.99</span><br>
+            <div class="cards">
+                <div class="card"> <img class="img" alt="minecraft_logo" src="img/minecraft.jpg">
+                </div>
+                <h1>video title 1 
+                </h1><br>
+                <span class="RR" id="RR">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
-                <span id="SA">you saving £9 </span><br>
-        </div>
+                <span class="SA" id="SA">you saving £9 </span><br>
+            </div>
 
-        <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
-                <h1>video title 1 </title></h1><br>
-                <span id="RR">RRP : £18.99</span><br>
+            <div class="cards">
+                <div class="card"> <img class="img" alt="minecraft" src="img/minecraft.jpg">
+                </div>
+                <h1>video title 1 
+                </h1><br>
+                <span class="RR" id="R">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
-                <span id="SA">you saving £9 </span><br>
-        </div>
+                <span class="SA" id="S">you saving £9 </span><br>
+            </div>
 
 
 
-        <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
-                <h1>video title 1 </title></h1><br>
-                <span id="RR">RRP : £18.99</span><br>
+            <div class="cards">
+                <div class="card"> <img class="img" alt="minecraft2" src="img/minecraft.jpg">
+                </div>
+                <h1>video title 1 
+                </h1><br>
+                <span class="RR" id="RR1">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
-                <span id="SA">you saving £9 </span><br>
-        </div>
-        <div class="cards">
-            <div class="card"> <img class="img" src="img/minecraft.jpg"> 
-             </div>
-                <h1>video title 1 </title></h1><br>
-                <span id="RR">RRP : £18.99</span><br>
+                <span class="SA" id="SA1">you saving £9 </span><br>
+            </div>
+            <div class="cards">
+                <div class="card"> <img class="img" alt="minecraft3" src="img/minecraft.jpg">
+                </div>
+                <h1>video title 1 
+                </h1><br>
+                <span class="RR" id="RR2">RRP : £18.99</span><br>
                 <span>price you pay £9.99</span><br>
-                <span id="SA">you saving £9 </span><br>
+                <span class="SA" id="SA2">you saving £9 </span><br>
+            </div>
+
         </div>
-      
-    </div>
 
     </section>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
