--- a/brief3/index.html
+++ b/brief3/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#">video to rent</a></li>
                 <li><a href="#">video to buy</a></li>
                 <li><a href="#">used DVDs</a></li>
-                <li><a href="#">Off</a></li>
+                <li><a href="#">Offer</a></li>
                 <li><input type="search" placeholder="recherche..."></li>
             </ul>
             <ol class="nav2">
