--- a/brief4/index.html
+++ b/brief4/index.html
@@ -152,6 +152,30 @@
           </div>
         </div>
       </div>
+      <div class="pages">
+        <div class="pg">
+          <h3>></h3>
+        </div>
+        <div class="pg">
+          <h3>1</h3>
+        </div>
+        <div class="pg">
+          <h3>2</h3>
+        </div>
+        <div class="pg">
+          <h3>3</h3>
+        </div>
+        <div class="pg">
+          <h3>...</h3>
+        </div>
+        <div class="pg">
+          <h3>19</h3>
+        </div>
+        <div class="pg">
+          <h3>></h3>
+        </div>
+        
+      </div>
     </section>
     <footer></footer>
   </body>
