--- a/brief4/index.html
+++ b/brief4/index.html
@@ -22,34 +22,36 @@
           </li>
           <div class="li_nav">
           <li>
-            <i class="fa-solid fa-house-user fa-2x"></i
+            <i class="fa-solid fa-house-user "></i
             ><a href="#">video to rent</a>
           </li>
           <li>
-            <i class="fa-solid fa-cart-shopping fa-2x"></i
+            <i class="fa-solid fa-cart-shopping "></i
             ><a href="#">video to buy</a>
           </li>
           <li>
-            <i class="fa-solid fa-compact-disc fa-2x"></i
+            <i class="fa-solid fa-compact-disc "></i
             ><a href="#">used DVDs</a>
           </li>
-          <li><i class="fa-solid fa-bolt fa-2x"></i><a href="#">Offer</a></li>
+          <li><i class="fa-solid fa-bolt "></i><a href="#">Offer</a></li>
         </div>
           <li>
             <input type="search" width="129px" placeholder="recherche..." />
           </li>
         </ul>
         <ol class="nav2">
-          <li><a href="#">home</a> /</li>
-          <li><a href="#">usedDVDs </a>/</li>
+          <li><a href="#">home /</a> </li>
+          <li><a href="#">usedDVDs /</a></li>
           <li><a href="#">Less than £10</a></li>
         </ol>
       </nav>
     </header>
     <section>
-      <h1>
-        <i class="fa fa-gamepad" aria-hidden="true"></i>&ensp;Less than £10
-      </h1>
+
+    <div class="eff">
+      
+      <h1><i class="fa fa-gamepad" aria-hidden="true"></i>Less than £10</h1>
+    </div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nam
         suscipit, non omnis,<br />
@@ -63,6 +65,131 @@
             <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
           </div>
           <h2>DOTA 2</h2>
+          <br />
+          <div class="price">
+            <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
+            ><br />
+            <span class="ra">price you pay : £9.99</span><br />
+            <span class="SA" id="SA2">you saving £9 </span><br />
+          </div>
+          <div class="but">
+            <button>Add now</button>
+          </div>
+        </div>
+
+        <div class="cards">
+          <div class="card">
+            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+          </div>
+          <h2>Crash of the titans</h2>
+          <br />
+          <div class="price">
+            <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
+            ><br />
+            <span class="ra">price you pay : £9.99</span><br />
+            <span class="SA" id="SA2">you saving £9 </span><br />
+          </div>
+          <div class="but">
+            <button>Add now</button>
+          </div>
+        </div>
+
+
+        <div class="cards">
+          <div class="card">
+            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+          </div>
+          <h2>Hollow knight</h2>
+          <br />
+          <div class="price">
+            <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
+            ><br />
+            <span class="ra">price you pay : £9.99</span><br />
+            <span class="SA" id="SA2">you saving £9 </span><br />
+          </div>
+          <div class="but">
+            <button>Add now</button>
+          </div>
+        </div>
+
+
+        <div class="cards">
+          <div class="card">
+            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+          </div>
+          <h2>It takes two</h2>
+          <br />
+          <div class="price">
+            <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
+            ><br />
+            <span class="ra">price you pay : £9.99</span><br />
+            <span class="SA" id="SA2">you saving £9 </span><br />
+          </div>
+          <div class="but">
+            <button>Add now</button>
+          </div>
+        </div>
+
+
+        <div class="cards">
+          <div class="card">
+            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+          </div>
+          <h2>The last of us</h2>
+          <br />
+          <div class="price">
+            <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
+            ><br />
+            <span class="ra">price you pay : £9.99</span><br />
+            <span class="SA" id="SA2">you saving £9 </span><br />
+          </div>
+          <div class="but">
+            <button>Add now</button>
+          </div>
+        </div>
+
+
+        <div class="cards">
+          <div class="card">
+            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+          </div>
+          <h2>Super Mario Maker</h2>
+          <br />
+          <div class="price">
+            <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
+            ><br />
+            <span class="ra">price you pay : £9.99</span><br />
+            <span class="SA" id="SA2">you saving £9 </span><br />
+          </div>
+          <div class="but">
+            <button>Add now</button>
+          </div>
+        </div>
+
+
+        <div class="cards">
+          <div class="card">
+            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+          </div>
+          <h2>luigi's mansion 3</h2>
+          <br />
+          <div class="price">
+            <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
+            ><br />
+            <span class="ra">price you pay : £9.99</span><br />
+            <span class="SA" id="SA2">you saving £9 </span><br />
+          </div>
+          <div class="but">
+            <button>Add now</button>
+          </div>
+        </div>
+
+
+        <div class="cards">
+          <div class="card">
+            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+          </div>
+          <h2>devil may cry 5</h2>
           <br />
           <div class="price">
             <span class="RR" id="R">RRP : <span class="pon">£18.99</span> </span
@@ -172,7 +299,7 @@
           <h3>19</h3>
         </div>
         <div class="pg">
-          <h3>></h3>
+          <h3><</h3>
         </div>
         
       </div>
