--- a/brief4/index.html
+++ b/brief4/index.html
@@ -79,7 +79,7 @@
 
         <div class="cards">
           <div class="card">
-            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+            <img class="img" alt="minecraft_logo" src="img/crash of the titans.jpg" />
           </div>
           <h2>Crash of the titans</h2>
           <br />
@@ -97,7 +97,7 @@
 
         <div class="cards">
           <div class="card">
-            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+            <img class="img" alt="minecraft_logo" src="img/hollow knight.webp" />
           </div>
           <h2>Hollow knight</h2>
           <br />
@@ -115,7 +115,7 @@
 
         <div class="cards">
           <div class="card">
-            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+            <img class="img" alt="minecraft_logo" src="img/It-Takes-Two-e1643647274115.webp" />
           </div>
           <h2>It takes two</h2>
           <br />
@@ -133,7 +133,7 @@
 
         <div class="cards">
           <div class="card">
-            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+            <img class="img" alt="minecraft_logo" src="img/thelastofus-remake-fuite-annonce.jpg" />
           </div>
           <h2>The last of us</h2>
           <br />
@@ -151,7 +151,7 @@
 
         <div class="cards">
           <div class="card">
-            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+            <img class="img" alt="minecraft_logo" src="img/SI_WiiU_SuperMarioMaker_v01_image1600w.jpg" />
           </div>
           <h2>Super Mario Maker</h2>
           <br />
@@ -169,7 +169,7 @@
 
         <div class="cards">
           <div class="card">
-            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+            <img class="img" alt="minecraft_logo" src="img/H2x1_NSwitch_LuigisMansion3.jpg" />
           </div>
           <h2>luigi's mansion 3</h2>
           <br />
@@ -187,7 +187,7 @@
 
         <div class="cards">
           <div class="card">
-            <img class="img" alt="minecraft_logo" src="img/dota2_social.jpg" />
+            <img class="img" alt="minecraft_logo" src="img/devil may cry 5.jpg" />
           </div>
           <h2>devil may cry 5</h2>
           <br />
@@ -304,6 +304,14 @@
         
       </div>
     </section>
-    <footer></footer>
+    <footer class="footer">
+      <div class="fo1">
+        <h3 class="fp">Vous cherchez des recommandations ?</h3>
+        <h5 class="fp">Connectez-vous pour voir les recommandations personnalisées</h5>
+        <button>connexion</button>
+        <h5 class="fp">Ou <a href="#">inscrivez-vous</a> et rejoignez Steam gratuitement</h5>
+      </div>
+
+    </footer>
   </body>
 </html>
